# hasql-extra

./: ChangeLog.md  hasql-extra.cabal
src/Hasql/: Decoders.hs  Encoders.hs
src/Hasql/Connection/: Extended.hs
